# mvp_control

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  configuration.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  package.xml  parameters.html  search.html  searchindex.js
.github/workflows/: on-pull-request.yml  pages.yml
_sources/: index.md.txt  installation.rst.txt
cfg/: dynamic_reconfigure_pid.cfg
config/: mappings.yaml  modes.yaml  thrusters.yaml  thrusters_new.yaml
docs/: conf.py  configuration.md  configuration.rst  contributing.rst  control_mode_configuration.md  index.md  installation.rst  parameters.rst  thruster_configuration.md  transform_configuration.md
include/mvp_control/: dictionary.h
launch/: load_params.launch  mvp_control.launch
msg/: ControlMode.msg  ControlModes.msg  ControlState.msg
src/: mvp_control_ros_node.cpp
src/mvp_control/: actuator.cpp  actuator.hpp  control_allocation.cpp  control_allocation.hpp  exception.hpp  mimo_pid.cpp  mimo_pid.h  mimo_pid.hpp  mvp_control.cpp  mvp_control.h  mvp_control_ros.cpp  mvp_control_ros.h  mvp_control_ros.hpp  polynomial_solver.cpp  polynomial_solver.h  polynomial_solver.hpp  thruster_ros.cpp  thruster_ros.h
srv/: GetControlMode.srv  GetControlModes.srv  SetControlPoint.srv
